第一阶段的纯文本完成。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">wei</string>
+    <string name="app_name">喵喵</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="method_url_to_get_data">http://pengfu.junpinzhi.cn/mobileClientV21.ashx?client=android&amp;version=1.2&amp;key=112&amp;PageIndex=</string>
+
 
 </resources>
